compiler/tests/success/slh/x86-64/protect_32.jazz
export
fn foo(reg u64 p) -> {
    #[nospill] reg u64 msf;
    msf = #init_msf();

    reg u32 x;
    x = 0;
    x = #protect_32(x, msf);

    [:u32 p] = x;
}
