compiler/tests/fail/slh/x86-64/invalid_type.jazz
fn main(reg u32 x, #msf reg u32 msf) {
    x = #protect(x, msf);
    [x] = 0;
}
